# cash-popper

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: publish.yml
src/: App.css  App.tsx  types.d.ts  types.guard.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api_server.rs  app_state.rs  cash_drawer.rs  main.rs
src/components/: APIStateProvider.tsx  AppStateProvider.tsx  NavStateProvider.tsx
src/components/APIDetails/: APIDetails.css  APIDetails.tsx  APIStatus.css  APIStatus.tsx  APIURL.tsx  index.ts
src/components/AppSection/: AppSection.tsx  index.ts
src/components/CashDrawerList/: CashDrawerList.css  CashDrawerList.tsx  CashDrawerListItem.css  CashDrawerListItem.tsx  index.ts
src/components/Footer/: Footer.tsx  index.ts
src/components/Home/: Home.tsx
src/components/Nav/: Nav.css  Nav.tsx
src/components/Toast/: Message.css  Message.tsx  index.ts  notify.tsx
src/contexts/: APIState.ts  AppState.ts  NavState.ts
