[package]
name = "cash-popper"
version = "0.0.1"
description = "Programmatically trigger a cash drawer on a local machine using a USB-Serial Adapter"
authors = ["Alexa Grey"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
axum = "0.6.18"
crossbeam = "0.8.2"
tauri = { version = "1.3", features = ["shell-open", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = "4.2.0"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
debug_print = "1.0.0"
tower-http = { version = "0.4.0", features = ["cors", "httpdate", "request-id", "tokio", "tokio-util"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
